--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Azure Static Web Apps custom roles demo</h1>
     <div>
-        <h2>Login12</h2> | <a href="/.auth/logout">Logout</a>
+        <a href="/.auth/login/aad">Login</a> | <a href="/.auth/logout">Logout</a>
     </div>
     <hr>
     <div>
