--- a/anonymous/index.html
+++ b/anonymous/index.html
@@ -17,7 +17,7 @@
     <script>
     (async function() {
         const { text } = await ( await fetch('/api/test/')).toString();
-        const {text1 } = "Hello Azure";
+        let {text1 } = "Hello Azure";
         document.querySelector('#name').innerHTML = text1;
     }());
     </script>
