--- a/anonymous/index.html
+++ b/anonymous/index.html
@@ -18,7 +18,7 @@
     (async function() {
         const { text } = await ( await fetch('/api/test/', { headers : {'Ocp-Apim-Subscription-Key': '3bb8f867849d428faf9204064b2833a8'},})).toString();
         let {text1 } = "Hello Azure";
-        document.querySelector('#name').innerHTML = await ( await fetch('/api/test/', { headers : {'Ocp-Apim-Subscription-Key': '3bb8f867849d428faf9204064b2833a8'},})).then((response) => response.json()).toString();
+        document.querySelector('#name').innerHTML = await ( await fetch('/api/test/', { headers : {'Ocp-Apim-Subscription-Key': '3bb8f867849d428faf9204064b2833a8'},})).then((response) => response.json()).body;
     }());
     </script>
 </body>
