--- a/anonymous/index.html
+++ b/anonymous/index.html
@@ -13,7 +13,7 @@
 
 <script>
 
-fetch('https://test-case.azure-api.net/api/test/', { headers : {'Ocp-Apim-Subscription-Key': '3bb8f867849d428faf9204064b2833a8'},})
+fetch('https://test-case.azure-api.net/api/test/'})
 
 .then(x => x.text())
 
