--- a/anonymous/index.html
+++ b/anonymous/index.html
@@ -8,12 +8,12 @@
 
 <h2>The fetch() Method</h2>
 
-<p id="demo">Fetch a file to change this text.</p>
+<p id="demo">Fetch a file to change this text. Still testing!!</p>
 
 
 <script>
 
-fetch('https://test-case.azure-api.net/api/test/', { headers : {'Ocp-Apim-Subscription-Key': '3bb8f867849d428faf9204064b2833a8'},})
+fetch('https://test-case.azure-api.net/api/test/', { headers : {'Ocp-Apim-Subscription-Key': 'f84c204fcc204555b9ce68556f319778'},})
 
 .then(x => x.text())
 
