--- a/anonymous/index.html
+++ b/anonymous/index.html
@@ -13,7 +13,7 @@
 
 <script>
 
-fetch('https://test-case.azure-api.net/api/test/', { headers : {'Ocp-Apim-Subscription-Key': 'f84c204fcc204555b9ce68556f319778'},})
+fetch('https://test-case.azure-api.net/api/test/')
 
 .then(x => x.text())
 
