--- a/anonymous/index.html
+++ b/anonymous/index.html
@@ -6,14 +6,14 @@
 
 <h1>JavaScript Fetch API</h1>
 
-<h2>The fetch() Method. Still Testing!! Yet again..!</h2>
+<h2>The fetch() Method. Still Testing!! Yet again 123..!</h2>
 
 <p id="demo">Fetch a file to change this text. Still testing!!</p>
 
 
 <script>
 
-fetch('https://test-case.azure-api.net/api/test/')
+fetch('/api/test/')
 
 .then(x => x.text())
 
